# Docker-Compose

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  groups_fixture.json  id_rsa  pyproject.toml  requirements.txt  пароль.txt  полезное.txt
.github/workflows/: ci-cd.yml  cl.yaml
DjangoDRF/: .coverage  .gitignore  Dockerfile  README.md  __init__.py  asgi.py  celery.py  docker-compose.yaml  manage.py  manage.py.save  requirements.txt  settings.py  urls.py  wsgi.py  пароль.txt
DjangoDRF/DjangoDRF/: .settings.py.swp  asgi.py  celery.py  settings.py  settings.py.save  urls.py  wsgi.py
DjangoDRF/lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
DjangoDRF/users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
DjangoDRF/workflows/: ci-cd.yml
config/: celery.py  settings.py  urls.py
course_platform/: apps.py  models.py  paginators.py  serializers.py  task.py  tests.py  urls.py  validators.py  views.py
course_platform/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_alter_lesson_link_to_video.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_updated_at.py
habits/: models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: courses_and_lessons.json  groups.json
lms/migrations/: 0001_initial.py  0002_remove_course_preview_remove_lesson_preview_and_more.py  0003_alter_course_owner.py  0004_alter_subscription_options_alter_lesson_video_url.py
lms/services/: stripe_service.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0002_payments.py  0003_rename_user_payments_owner.py  0004_alter_payments_owner.py
workflows/: ci-cd.yml  cl.yaml
(+17 files in other folders)
