[tool.poetry]
name = "homework-drf"
version = "0.1.0"
description = ""
authors = ["Rafael  <aptikeev.rafael@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "course_platform" },
    { include = "users" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.5"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.8"
drf-yasg = "^1.21.5"
stripe = "^11.3.0"
celery = "^5.3.1"
eventlet = "^0.38.0"
redis = "^5.2.0"
django-celery-beat = "^2.5.0"
billiard = "^4.2.1"
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
